--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
 
 <h1>Top Products</h1>
 <h5>
-<button onclick="show()">Ogólne</button>
-<button onclick="show_dog()">Psy</button>
-<button onclick="show_cat()">Koty </button>
-<button onclick="show_rodents()">Gryzonie</button>
-<button onclick="show_bird()">Ptaki</button>
+<button onclick="show(x)">Ogólne</button>
+<button onclick="show(dog)">Psy</button>
+<button onclick="show(cat)">Koty </button>
+<button onclick="show(rodents)">Gryzonie</button>
+<button onclick="show(bird)">Ptaki</button>
     <div class="top-products" id="top-products">
         <img src="assets/ptak2.jpg">
             <div class="space"></div>
