--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="shortcut icon" type="image/png" href="favicon.jpg"/>
+    <link rel="shortcut icon" type="image/png" href="assets/favicon.jpg"/>
     <script src="https://kit.fontawesome.com/fb1aae2fc7.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="script.js" async></script>
 </head>
@@ -23,7 +23,7 @@
                                     <li><a href="#">Smycze</a></li>
                                         <li><a href="#">Zabawki</a></li>
                                             <li> <a href="#">Smakołyki</a></li>
-                                            <li> <a href="#">Witaminy</a></li>
+                                                <li> <a href="#">Witaminy</a></li>
                     </ul>
               </div>
               <b></b>
@@ -88,11 +88,11 @@
 
 <h1>Top Products</h1>
 <h5>
-<button onclick="show(x)">Ogólne</button>
-<button onclick="show(dog)">Psy</button>
-<button onclick="show(cat)">Koty </button>
-<button onclick="show(rodents)">Gryzonie</button>
-<button onclick="show(bird)">Ptaki</button>
+<button onclick="show(x)"><img src="assets/button-main.jpg" class="button">Ogólne</button>
+<button onclick="show(dog)"><img src="assets/button-dog.png" class="button">Psy</button>
+<button onclick="show(cat)"><img src="assets/button-cat.jpg" class="button">Koty </button>
+<button onclick="show(rodents)"><img src="assets/button-rodents.jpg" class="button">Gryzonie</button>
+<button onclick="show(bird)"><img src="assets/button-bird.png" class="button">Ptaki</button>
     <div class="top-products" id="top-products">
         <img src="assets/ptak2.jpg">
             <div class="space"></div>
