--- a/index.html
+++ b/index.html
@@ -94,64 +94,63 @@
 <button onclick="show(rodents)"><img src="assets/button-rodents.jpg" class="button">Gryzonie</button>
 <button onclick="show(bird)"><img src="assets/button-bird.png" class="button">Ptaki</button>
     <div class="top-products" id="top-products">
-        <img src="assets/ptak2.jpg">
+        <img src="assets/ptak2.jpg"><span class="first_span">Vitakraft do -30%</span>
             <div class="space"></div>
-                <img src="assets/pies4.jpg">
+                <img src="assets/pies4.jpg"><span  class="second_span">Budy do -55%</span>
                     <img src="assets/sale.png" class="sale2">
                         <div class="space"></div>
-                            <img src="assets/kot1.jpg">
+                            <img src="assets/kot1.jpg"><span  class="third_span">Whiskas do -49%</span>
                                 <div class="space"></div>
                                     <img src="assets/sale.png" class="sale3">
-                                        <img src="assets/ptak1.jpg">
+                                        <img src="assets/ptak1.jpg"><span  class="fourth_span">Klatki do -25%</span>
                                             <img src="assets/sale.png" class="sale4">
     </div>
     <div class="top-products-dog" id="top-products-dog">
-         <img src="assets/pies1.jpg">
+         <img src="assets/pies1.jpg"><span class="first_span">Piszczałki do -30%</span>
             <img src="assets/sale.png" class="sale1">
                 <div class="space"></div>
-                    <img src="assets/pies2.jpg">
+                    <img src="assets/pies2.jpg"><span  class="second_span">Cosie do -55%</span>
                         <img src="assets/sale.png" class="sale2">
                             <div class="space"></div>
-                                <img src="assets/pies3.jpg">
+                                <img src="assets/pies3.jpg"><span  class="third_span">Frolic do -49%</span>
                                     <img src="assets/sale.png" class="sale3">
                                         <div class="space"></div>
-                                            <img src="assets/pies4.jpg">
+                                            <img src="assets/pies4.jpg"><span  class="fourth_span">Budy do -25%</span>
                                                 <img src="assets/sale.png" class="sale4">
     </div>
     <div class="top-products-cat" id="top-products-cat">
-        <img src="assets/kot1.jpg">
+        <img src="assets/kot1.jpg"><span class="first_span">Whiskas do -49%</span>
             <img src="assets/sale.png" class="sale1">
                 <div class="space"></div>
-                    <img src="assets/kot2.jpg">
+                    <img src="assets/kot2.jpg"><span  class="second_span">Kitekat do -55%</span>
                         <div class="space"></div>
-                            <img src="assets/kot3.jpg">
+                            <img src="assets/kot3.jpg"><span  class="third_span">Piłeczki do -49%</span>
                                 <img src="assets/sale.png" class="sale3">
                                     <div class="space"></div>
-                                        <img src="assets/kot4.jpg">
+                                        <img src="assets/kot4.jpg"><span  class="fourth_span">Drapaki do -25%</span>
     </div>
     <div class="top-products-rodents" id="top-products-rodents">
-        <img src="assets/gryzon1.jpg">
+        <img src="assets/gryzon1.jpg"><span class="first_span">karMEo do -30%</span>
             <img src="assets/sale.png" class="sale1">
                 <div class="space"></div>
-                    <img src="assets/gryzon2.jpg">
-                        <img src="assets/sale.png" class="sale2">
-                            <div class="space"></div>
-                                <img src="assets/gryzon3.jpg">
-                                    <img src="assets/sale.png" class="sale3">
-                                        <div class="space"></div>
-                                            <img src="assets/gryzon4.jpg">
-                                                <img src="assets/sale.png" class="sale4">
-    </div>
-    <div class="top-products-bird" id="top-products-bird">
-        <img src="assets/ptak1.jpg">
-            <img src="assets/sale.png" class="sale1">
-                <div class="space"></div>
-                    <img src="assets/ptak2.jpg">
+                    <img src="assets/gryzon2.jpg"><span  class="second_span">Form food do -55%</span>
                         <div class="space"></div>
-                            <img src="assets/ptak3.jpg">
+                            <img src="assets/gryzon3.jpg"><span  class="third_span">Labirynty do -49%</span>
                                 <img src="assets/sale.png" class="sale3">
                                     <div class="space"></div>
-                                        <img src="assets/ptak4.jpg">
+                                        <img src="assets/gryzon4.jpg"><span  class="fourth_span">Kółka do -25%</span>
+                                            <img src="assets/sale.png" class="sale4">
+    </div>
+    <div class="top-products-bird" id="top-products-bird">
+        <img src="assets/ptak1.jpg"><span class="first_span">Klatki do -25%</span>
+            <img src="assets/sale.png" class="sale1">
+                <div class="space"></div>
+                    <img src="assets/ptak2.jpg"><span  class="second_span">Vitakraft do -30%</span>
+                        <div class="space"></div>
+                            <img src="assets/ptak3.jpg"><span  class="third_span">Prestige do -49%</span>
+                                <img src="assets/sale.png" class="sale3">
+                                    <div class="space"></div>
+                                        <img src="assets/ptak4.jpg"><span  class="fourth_span">Drabinki do -25%</span>
                                             <img src="assets/sale.png" class="sale4">
     </div>
 </h5>
